# Lizard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WINDOWS_INSTRUCTIONS.md  flake.nix  go.mod  go.sum  main.go
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
