[package]
name = "lizard"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.3"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.14"
winit = { version = "0.29", features = ["rwh_05"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
] }